# aqi-health-dashboard

./: README.md  app.py  build_data.py  prepare_data.py  pyproject.toml  requirements.txt
data/: final_data.csv
